--- a/src/components/navbar/Navbar.css
+++ b/src/components/navbar/Navbar.css
@@ -1,7 +1,3 @@
-body{
-    background: #10242e;
-background: linear-gradient(90deg, rgba(16, 36, 46, 1) 100%, rgba(10, 2, 2, 1) 100%, rgba(0, 0, 0, 1) 62%);
-}
 
 nav ul li{
     color: white;
@@ -21,12 +17,17 @@ nav ul li{
 
 #logo-png{
     color: #fff;
-    font-weight: 500;
+    font-weight: 800;
+    text-shadow: 0px 1px 1px;
     font-size: 24px;
-    letter-spacing: 2px;
+    letter-spacing: 0.2px;
+}
+#logo-png img{
+    width: 30px;
+    height: 30px;
 }
 
-.btn-nav{
+.btn-nav{   
     padding: 8px 10px;
     color: white;
     border-radius: 10px;
