--- a/src/index.css
+++ b/src/index.css
@@ -9,3 +9,13 @@ h1,h2,h3,h4,h5,h6,p{
   margin: 0;
   padding: 0;
 }
+
+body{
+    background: #10242e;
+background: linear-gradient(90deg, rgba(16, 36, 46, 1) 100%, rgba(10, 2, 2, 1) 100%, rgba(0, 0, 0, 1) 62%);
+}
+
+a{
+  text-decoration: none;
+  color: inherit;
+}
