--- a/src/pages/header/Header.css
+++ b/src/pages/header/Header.css
@@ -4,12 +4,7 @@
     align-items: center;
 }
 
-.header-container img{
-    width: 100%;
-    height: 550px;
-    border-radius: 100px;
 
-}
 
 .header-content-div{
     display: flex;
@@ -95,16 +90,49 @@
 
 
 .coder-img{
-    width: 100px;
-    height: 100px;
     border-radius: 50%;
-    animation: aninate-image alternate linear 7s infinite;
+      width: 100%;
+     max-height: 600px;
+    border-radius: 100px;
 }
 
 @media screen and (max-width:769px) {
     .header-container{
         flex-direction: column;
         justify-content: center;
+        position: relative;
+        overflow: hidden;
     }
+
+    .coder-img{
+        position: absolute;
+        width: 400px;
+        left: 120px;
+        top: -10px;
+        opacity: 0.2;
+        height: 400px;
+    }
+    
 }
 
+
+
+@media screen and (max-width:521px) {
+   
+    .header-content-div h1{
+    font-size: 55px;
+    font-weight: 700;
+    letter-spacing: 1px;
+}
+}
+
+
+
+@media screen and (max-width:469px) {
+   
+    .header-content-div h1{
+    font-size: 45px;
+    font-weight: 700;
+    letter-spacing: 1px;
+}
+}
